Web Inspector: XHRs and Web Worker scripts are not searchable https://bugs.webkit.org/show_bug.cgi?id=154214 <rdar://problem/24643587>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-04-08
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* inspector/protocol/Page.json:
Add optional requestId to search results properties and search
parameters for when the frameId and url are not enough. XHR
resources, and "Other" resources will use this.

Source/WebCore:

Test: inspector/page/searchInResources.html

* inspector/InspectorPageAgent.h:
* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::searchInResource):
(WebCore::InspectorPageAgent::searchInResources):
Let the NetworkAgent handle individual search requests
with a requestId. And provide global search results for
"other" resources and will include requestId properties.

* inspector/InspectorNetworkAgent.h:
* inspector/InspectorNetworkAgent.cpp:
(WebCore::InspectorNetworkAgent::didFinishXHRLoading):
(WebCore::buildObjectForSearchResult):
(WebCore::InspectorNetworkAgent::searchOtherRequests):
(WebCore::InspectorNetworkAgent::searchInRequest):
Search saved "other" resource data content.

* inspector/NetworkResourcesData.h:
* inspector/NetworkResourcesData.cpp:
(WebCore::NetworkResourcesData::resources):
Expose the resources for iteration by the NetworkAgent.

Source/WebInspectorUI:

* UserInterface/Views/SearchSidebarPanel.js:
(WebInspector.SearchSidebarPanel.prototype.performSearch.resourceCallback):
(WebInspector.SearchSidebarPanel.prototype.performSearch.resourcesCallback):
Carry forward the requestId property if it is available.

LayoutTests:

* inspector/page/resources/search-script.js: Added.
* inspector/page/resources/search-stylesheet.css: Added.
* inspector/page/resources/search-worker.js: Added.
* inspector/page/resources/search-xhr.txt: Added.
* inspector/page/searchInResources-expected.txt: Added.
* inspector/page/searchInResources.html: Added.
Test for the Page domain's search commands.

Canonical link: https://commits.webkit.org/174529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199263 268f45cc-cd09-0410-ab3c-d52691b4dbfc