Source/WebCore/inspector/NetworkResourcesData.cpp
@@ -283,6 +283,13 @@ void NetworkResourcesData::clear(const String& preservedLoaderId)
     m_requestIdToResourceDataMap.swap(preservedMap);
 }
 
+Vector<NetworkResourcesData::ResourceData*> NetworkResourcesData::resources()
+{
+    Vector<NetworkResourcesData::ResourceData*> resources;
+    copyValuesToVector(m_requestIdToResourceDataMap, resources);
+    return resources;
+}
+
 NetworkResourcesData::ResourceData* NetworkResourcesData::resourceDataForRequestId(const String& requestId)
 {
     if (requestId.isNull())
