LayoutTests/inspector/page/resources/search-worker.js
@@ -1,0 +1,5 @@
+// Worker resource with the SEARCH-STRING.
+
+self.addEventListener("message", (event) => {
+    self.postMessage("echo: " + event.data);
+});
